Ajustes a los estilos de la paagina de Contacto

--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
     <link rel="stylesheet" href="./../style.css"/>
 </head>
-<body class="gridContainer">
+<body class="gridContainerContact">
     <header>
         <a title="Home" href="./../index.html"><img id="header__logo" src="./../assets/Iconos/Home.png" alt="Home Icon"></a>
         <nav>
