Se agrega icono de sol y animacion spinner a pag Contacto

--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -115,6 +115,7 @@
                 <!-- <input type="button" id="botonSinFuncion" value="No hacer nada">    -->
                 <input type="reset" id="botonLimpiar" value="Limpiar">
                 <input type="submit" id="botonEnviar" value="Registrarme">
+                <a title="license" href="https://creativecommons.org/licenses/by/4.0/"><img id="sunSpinner" src="./../assets/Imagenes/SunshineByClipartinfo.png" alt="sunSpinner"></a>
         </div>
     </form>
    </fieldset>
