ajuste de footer en pag Contacto

--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -84,7 +84,7 @@
             <legend>Credenciales de acceso</legend>
                 <div>
                     <label for="correo">Correo electrónico:</label>
-                    <input type="email" id="email" placeholder="micorreo@hotmail.com">
+                    <input type="email" id="email" placeholder="mymail@example.com">
                 </div>
                 <div>
                     <label for="clave">Contraseña:</label>
@@ -119,9 +119,9 @@
         </div>
     </form>
    </fieldset>
+    <footer>
+        <p>Autor: Adrián Fernández Cabrera</p>
+        <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
+    </footer>
 </body>
-<footer>
-    <p>Autor: Adrián Fernández Cabrera</p>
-    <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
-</footer>
 </html>
