--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./../style.css"/>
 </head>
 <body class="gridContainerContact">
@@ -23,105 +24,124 @@
     </header>
     <section>
         <div class="tabla">
-            <table class="tablaContacto">
-                <tr>
-                    <th>Oficina</th>
-                    <th>Municipio</th>
-                    <th>Dirección</th>
-                    <th>Teléfono</th>
-                </tr>
-                <tr>
-                    <td>Los Balsos</td>
-                    <td>Medellín</td>
-                    <td>Cra 12 Sur # 18 - 168</td>
-                    <td>3532222</td>
-                </tr>
-                <tr>
-                    <td>Ancón Sur</td>
-                    <td>Caldas</td>
-                    <td>Autopista 1era # 125 - Sector La Tablaza</td>
-                    <td>3189353</td>
-                </tr>
-                <tr>
-                    <td>Centro Ejecutivo</td>
-                    <td>Barranquilla</td>
-                    <td>Cra 74 # 54 - 17</td>
-                    <td>3251819</td>
-                </tr>
+            <table class="table table-hover tablaContacto">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Oficina</th>
+                        <th scope="col">Municipio</th>
+                        <th scope="col">Dirección</th>
+                        <th scope="col">Teléfono</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Los Balsos</td>
+                        <td>Medellín</td>
+                        <td>Cra 12 Sur # 18 - 168</td>
+                        <td>3532222</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Ancón Sur</td>
+                        <td>Caldas</td>
+                        <td>Autopista 1era # 125 - Sector La Tablaza</td>
+                        <td>3189353</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Centro Ejecutivo</td>
+                        <td>Barranquilla</td>
+                        <td>Cra 74 # 54 - 17</td>
+                        <td>3251819</td>
+                    </tr>
+                </tbody>
             </table> 
         </div>
     </section>
    <fieldset class="register">
     <legend>Formulario de Registro</legend>
     <form action="" method="get">
-        <div id="initFields">
-            <label for="nombres">Nombres:</label>
-            <input type="text" id="nombres">
-            <label for="apellidos">Apellidos:</label>
-            <input type="text" id="apellidos"/>
-            <label for="edad">Edad:</label>
-            <input type="number" id="edad"/>
-        </div>
-        <div>
-            <label for="identificacion">Identificación:</label>
-            <input type="text" id="identificacion"/>
-            <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono"/>
-            <label for="paises">País de origen</label>
-            <select name="" id="countries">
-                <option value="Argentina">Argentina</option>
-                <option value="Brasil">Brasil</option>
-                <option value="Bolivia">Bolivia</option>
-                <option value="Chile">Chile</option>
-                <option value="Colombia">Colombia</option>
-                <option value="Ecuador">Ecuador</option>
-                <option value="Peru">Perú</option>
-                <option value="Paraguay">Paraguay</option>
-                <option value="Venezuela">Venezuela</option>
-            </select>
-        </div>
-        <fieldset class="credentials">
-            <legend>Credenciales de acceso</legend>
-                <div>
-                    <label for="correo">Correo electrónico:</label>
-                    <input type="email" id="email" placeholder="micorreo@hotmail.com">
+        <div id="initFields" class="input-group mb-3">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Nombres" aria-label="nombres">
+                <input type="text" class="form-control" placeholder="Apellidos" aria-label="apellidos">
+                <input type="text" class="form-control" placeholder="Identificación" aria-label="identificacion">
+                <input type="tel" class="form-control" placeholder="Teléfono" aria-label="telefono">
+            </div>
+            <div id="initFields__EdadPais" class="input-group mb-3">
+                <input type="number" class="form-control" placeholder="Edad" aria-label="edad">
+                <div id="initfield__EdadPais__Pais">
+                    <label>País de origen:</label>
+                    <select class="form-select form-select-sm" name="" id="countries">
+                        <option value="Argentina">Argentina</option>
+                        <option value="Brasil">Brasil</option>
+                        <option value="Bolivia">Bolivia</option>
+                        <option value="Chile">Chile</option>
+                        <option value="Colombia">Colombia</option>
+                        <option value="Ecuador">Ecuador</option>
+                        <option value="Peru">Perú</option>
+                        <option value="Paraguay">Paraguay</option>
+                        <option value="Venezuela">Venezuela</option>
+                    </select>
                 </div>
-                <div>
-                    <label for="clave">Contraseña:</label>
-                    <input type="password" id="psw" placeholder="Ingrese contraseña" >
+            </div>
+        </div>
+        <fieldset id="credenciales" class="credentials">
+            <legend>Credenciales de acceso</legend>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+                    <div id="server">
+                        <span class="input-group-text">@</span>
+                        <input type="text" class="form-control" placeholder="Server" aria-label="Server">
+                    </div>
+                  </div>
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control" placeholder="Contraseña" aria-label="psw">
                 </div>
         </fieldset>
-        <fieldset class="bulletin">
+        <fieldset id="boletin" class="bulletin">
             <legend>¿Desea recibir boletines informativos?</legend>
-            <div>
-                <input name="frec" type="radio" id="frec1" value="1" checked>
-                <label for="">Nunca</label>
-            </div>
-            <div>
-                <input name="frec" type="radio" id="frec2" value="2">
-                <label for="">Mensualmente</label>
-            </div>
-            <div>
-                <input name="frec" type="radio" id="frec3" value="3">
-                <label for="">Semanalmente</label>
-            </div>
-            <div>
-                <input name="frec" type="radio" id="frec4" value="4">
-                <label for="">Diariamente</label>
+            <div class="input-group">
+                <div>
+                  <input class="form-check-input mt-0" name="frec" type="radio" value="1">
+                  <label for="">Nunca</label>
+                </div>
+                <div>
+                  <input class="form-check-input mt-0" name="frec" type="radio" value="2">
+                  <label for="">Mensualmente</label>
+                </div>
+                <div>
+                  <input class="form-check-input mt-0" name="frec" type="radio" value="3">
+                  <label for="">Mensualmente</label>
+                </div>
+                <div>
+                  <input class="form-check-input mt-0" name="frec" type="radio" value="4">
+                  <label for="">Diariamente</label>
+                </div>
             </div>
         </fieldset>
 
         <div class="buttons">
                 <!-- <input type="button" id="botonSinFuncion" value="No hacer nada">    -->
-                <input type="reset" id="botonLimpiar" value="Limpiar">
-                <input type="submit" id="botonEnviar" value="Registrarme">
+                <button id="botonLimpiar" type="button" class="btn btn-secondary">Limpiar</button>
+                <button id="botonCargando" type="button" class="btn btn-primary">
+                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    <span class="visually-hidden"></span>Loading...
+                </button>
+                <button id="botonEnviar" type="button" class="btn btn-primary">Registrarme</button>
                 <a title="license" href="https://creativecommons.org/licenses/by/4.0/"><img id="sunSpinner" src="./../assets/Imagenes/SunshineByClipartinfo.png" alt="sunSpinner"></a>
+                <!-- <input type="reset" id="botonLimpiar" value="Limpiar">
+                <input type="submit" id="botonEnviar" value="Registrarme">
+                <a title="license" href="https://creativecommons.org/licenses/by/4.0/"><img id="sunSpinner" src="./../assets/Imagenes/SunshineByClipartinfo.png" alt="sunSpinner"></a> -->
         </div>
     </form>
    </fieldset>
+    <footer>
+        <p>Autor: Adrián Fernández Cabrera</p>
+        <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
+    </footer>
+
 </body>
-<footer>
-    <p>Autor: Adrián Fernández Cabrera</p>
-    <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
-</footer>
 </html>
