Ajuste a la lista del boletin pag Contacto

--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -114,7 +114,7 @@
                 </div>
                 <div>
                   <input class="form-check-input mt-0" name="frec" type="radio" value="3">
-                  <label for="">Mensualmente</label>
+                  <label for="">Semanalmente</label>
                 </div>
                 <div>
                   <input class="form-check-input mt-0" name="frec" type="radio" value="4">
@@ -132,9 +132,6 @@
                 </button>
                 <button id="botonEnviar" type="button" class="btn btn-primary">Registrarme</button>
                 <a title="license" href="https://creativecommons.org/licenses/by/4.0/"><img id="sunSpinner" src="./../assets/Imagenes/SunshineByClipartinfo.png" alt="sunSpinner"></a>
-                <!-- <input type="reset" id="botonLimpiar" value="Limpiar">
-                <input type="submit" id="botonEnviar" value="Registrarme">
-                <a title="license" href="https://creativecommons.org/licenses/by/4.0/"><img id="sunSpinner" src="./../assets/Imagenes/SunshineByClipartinfo.png" alt="sunSpinner"></a> -->
         </div>
     </form>
    </fieldset>
