--- a/pags/equipo.html
+++ b/pags/equipo.html
@@ -19,7 +19,7 @@
                 <li><a title="Project" href="./proyectos.html">PROYECTOS</a></li>
             </ul>
         </nav>
-        <a class="header__last" title="Contact" href="./pags/contacto.html">CONTACTO</a>
+        <a class="header__last" title="Contact" href="./contacto.html">CONTACTO</a>
     </header>
     <section class="Imagenes">
         <table class="teamMembers">
