Se agrega navbar con bootstrap en pag Equipo y ajustes de estilos en pag Experiencia

--- a/pags/experiencia.html
+++ b/pags/experiencia.html
@@ -10,52 +10,6 @@
     <link rel="stylesheet" href="./../style.css"/>
 </head>
 <body class="gridContainer">
-
-    <!-- <header>
-        <a title="Home" href="./../index.html"><img id="header__logo" src="./../assets/Iconos/Home.png" alt="Home Icon"></a>
-        <nav>
-            <ul class="header__navBar">
-                <li><a  title="Home" href="./../index.html">HOME</a></li>
-                <li class="header__nav__option--active"><a title="Experience" href="./experiencia.html">EXPERIENCIA</a></li>
-                <li><a title="Team" href="./equipo.html">EQUIPO</a></li>
-                <li><a title="Project" href="./proyectos.html">PROYECTOS</a></li>
-            </ul>
-        </nav>
-        <a class="header__last" title="Contact" href="./contacto.html">CONTACTO</a>
-    </header>
-
-    <section class="Imagenes">
-        <div class="Imagenes__Imagen1 inRow">
-                <img src="./../assets/Imagenes/jeroen-van-de-water.jpg" alt="Paneles Solares 1" >
-                <div class="Imagenes__Imagen1 Referencia">
-                    Photo by <a href="https://unsplash.com/@joenevdw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeroen van de Water</a> on <a href="https://unsplash.com/s/photos/solar-cells?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                </div> 
-        </div>
-        <div class="Imagenes__Imagen2 inRow">
-                <img src="./../assets/Imagenes/thomas-coker.jpg" alt="Paneles Solares 2">
-                <div class="Imagenes__Imagen2 Referencia">
-                    Photo by <a href="https://unsplash.com/@thomas_coker_nz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Thomas Coker</a> on <a href="https://unsplash.com/s/photos/solar-cells?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                </div>
-        </div>
-        <div class="Imagenes__Imagen3 inRow">
-                <img src="./../assets/Imagenes/vivint-solar.jpg" alt="Paneles Solares 3" >
-                <div class="Imagenes__Imagen3 Referencia">
-                    Photo by <a href="https://unsplash.com/@vivintsolar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vivint Solar</a> on <a href="https://unsplash.com/s/photos/solar-cells?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                </div>
-        </div>
-        <div class="Imagenes__Imagen4 inRow">
-                <img src="./../assets/Imagenes/michael-fortsch.jpg" alt="Paneles Solares 4">
-                <div class="Imagenes__Imagen4 Referencia">
-                    Photo by <a href="https://unsplash.com/@michael_f?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Michael Förtsch</a> on <a href="https://unsplash.com/s/photos/solar-cells?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                </div>
-        </div>
-        <div class="Imagenes__Imagen5 inRow">
-                <img src="./../assets/Imagenes/vivint-solar2.jpg" alt="Paneles Solares 5">
-                <div class="Imagenes__Imagen5 Referencia">
-                    Photo by <a href="https://unsplash.com/@vivintsolar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vivint Solar</a> on <a href="https://unsplash.com/s/photos/solar-cells?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-                </div>
-        </div>
-    </section> -->
     <header id="menuNav">
         <a class="navbar-brand" title="Home" href="./../index.html"><img id="header__logo" src="./../assets/Iconos/Home.png" alt="Home Icon"></a>
         <nav class="navbar navbar-expand-sm">
@@ -126,7 +80,7 @@
         <table class="tabla">
             <tr>
                 <td>
-                <img id="paneles1" src="./../assets/Imagenes/jeroen-van-de-water.jpg" alt="Paneles Solares 1" style="width:256px;height:256px">
+                <img id="paneles1" src="./../assets/Imagenes/jeroen-van-de-water.jpg" alt="Paneles Solares 1">
                 </td>
                 <td>
                     Proyecto en empresa privada de 750 kW en la ciudad de Melbourne. El proyecto permitió la autosuficiencia energética de la empresa en su HQ principal, permitiendo la desconexión total del edificio de la red de energía local.
@@ -134,7 +88,7 @@
             </tr>
             <tr>
                 <td>
-                <img id="paneles2" src="./../assets/Imagenes/thomas-coker.jpg" alt="Paneles Solares 2" style="width:256px;height:256px">
+                <img id="paneles2" src="./../assets/Imagenes/thomas-coker.jpg" alt="Paneles Solares 2">
                 </td>
                 <td>
                     Proyecto de 5 MW asociado a la expansión energética del estado de Colorado. Permitió reducir las emisiones asociadas a la generación térmica que reemplazó. En este proyecto la empresa se encargó de los estudios energéticos de irradiación de irradiación solar.
@@ -142,7 +96,7 @@
             </tr>
             <tr>
                 <td>
-                <img id="paneles3" src="./../assets/Imagenes/vivint-solar.jpg" alt="Paneles Solares 3" style="width:256px;height:256px">
+                <img id="paneles3" src="./../assets/Imagenes/vivint-solar.jpg" alt="Paneles Solares 3">
                 </td>
                 <td>
                 Proyecto con capacidad de 120 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
@@ -150,7 +104,7 @@
             </tr>
             <tr>
                 <td>
-                <img id="paneles4" src="./../assets/Imagenes/michael-fortsch.jpg" alt="Paneles Solares 4" style="width:256px;height:256px">
+                <img id="paneles4" src="./../assets/Imagenes/michael-fortsch.jpg" alt="Paneles Solares 4">
                 </td>
                 <td>
                 Proyecto fotovoltaico de 5 MW asociado al proyecto de expansión colombiano. Localizado en el municipio de El Paso, departamento del Cesar. Está alineado con el plan de transición energética en la cual está inmerso el sistema eléctrico colombiao.
@@ -158,7 +112,7 @@
             </tr>
             <tr>
                 <td>
-                <img id="paneles5" src="./../assets/Imagenes/vivint-solar2.jpg" alt="Paneles Solares 5" style="width:256px;height:256px">
+                <img id="paneles5" src="./../assets/Imagenes/vivint-solar2.jpg" alt="Paneles Solares 5">
                 </td>
                 <td>
                 Proyecto con capacidad de 150 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
