Se agrega NavBar con Bootstrap en pag Proyectos

--- a/pags/proyectos.html
+++ b/pags/proyectos.html
@@ -6,67 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROYECTOS</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./../style.css"/>
 </head>
 <body class="gridContainer">
-    <header>
-        <a title="Home" href="./../index.html"><img id="header__logo" src="./../assets/Iconos/Home.png" alt="Home Icon"></a>
-        <nav>
-            <ul class="header__navBar">
-                <li><a  title="Home" href="./../index.html">HOME</a></li>
-                <li><a title="Experience" href="./experiencia.html">EXPERIENCIA</a></li>
-                <li><a title="Team" href="./equipo.html">EQUIPO</a></li>
-                <li class="header__nav__option--active"><a title="Project" href="./proyectos.html">PROYECTOS</a></li>
-            </ul>
-        </nav>
-        <a class="header__last" title="Contact" href="./contacto.html">CONTACTO</a>
-    </header>
+    <header id="menuNav">
+      <a class="navbar-brand" title="Home" href="./../index.html"><img id="header__logo" src="./../assets/Iconos/Home.png" alt="Home Icon"></a>
+      <nav class="navbar navbar-expand-sm">
+          <div class="container-fluid">
+              <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                  <li class="nav-item"><a aria-curret="page" title="Home" href="./../index.html">HOME</a></li>
+                  <li class="nav-item"><a title="Experience" href="./experiencia.html">EXPERIENCIA</a></li>
+                  <li class="nav-item"><a title="Team" href="./equipo.html">EQUIPO</a></li>
+                  <li class="header__nav__option--active"><a title="Project" href="./proyectos.html">PROYECTOS</a></li>
+              </ul>
+          </div>  
+      </nav>
+      <a class="header__last" title="Contact" href="./contacto.html">CONTACTO</a>
+  </header>
    <div class="Imagenes">
-          <table class="projects">
-              <tr>
-                  <td>
-                    <img src="./../assets/Imagenes/jeroen-van-de-water.jpg" alt="Paneles Solares 1" >
-                  </td>
-                  <td>
-                      Proyecto en empresa privada de 750 kW en la ciudad de Melbourne. El proyecto permitió la autosuficiencia energética de la empresa en su HQ principal, permitiendo la desconexión total del edificio de la red de energía local.
-                  </td>
-              </tr>
-              <tr>
-                  <td>
-                    <img src="./../assets/Imagenes/thomas-coker.jpg" alt="Paneles Solares 2" >
-                  </td>
-                  <td>
-                     Proyecto de 5 MW asociado a la expansión energética del estado de Colorado. Permitió reducir las emisiones asociadas a la generación térmica que reemplazó. En este proyecto la empresa se encargó de los estudios energéticos de irradiación de irradiación solar.
-                  </td>
-              </tr>
-              <tr>
-                  <td>
-                    <img src="./../assets/Imagenes/vivint-solar.jpg" alt="Paneles Solares 3">
-                  </td>
-                  <td>
-                    Proyecto con capacidad de 120 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
-                  </td>
-              </tr>
-              <tr>
-                  <td>
-                    <img src="./../assets/Imagenes/michael-fortsch.jpg" alt="Paneles Solares 4">
-                  </td>
-                  <td>
-                    Proyecto fotovoltaico de 5 MW asociado al proyecto de expansión colombiano. Localizado en el municipio de El Paso, departamento del Cesar. Está alineado con el plan de transición energética en la cual está inmerso el sistema eléctrico colombiao.
-                  </td>
-              </tr>
-              <tr>
-                  <td>
-                    <img src="./../assets/Imagenes/vivint-solar2.jpg" alt="Paneles Solares 5">
-                  </td>
-                  <td>
-                    Proyecto con capacidad de 150 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
-                  </td>
-              </tr>
-          </table>
+      <table class="projects">
+        <tr>
+          <td>
+            <img src="./../assets/Imagenes/jeroen-van-de-water.jpg" alt="Paneles Solares 1" >
+          </td>
+          <td>
+              Proyecto en empresa privada de 750 kW en la ciudad de Melbourne. El proyecto permitió la autosuficiencia energética de la empresa en su HQ principal, permitiendo la desconexión total del edificio de la red de energía local.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="./../assets/Imagenes/thomas-coker.jpg" alt="Paneles Solares 2" >
+          </td>
+          <td>
+              Proyecto de 5 MW asociado a la expansión energética del estado de Colorado. Permitió reducir las emisiones asociadas a la generación térmica que reemplazó. En este proyecto la empresa se encargó de los estudios energéticos de irradiación de irradiación solar.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="./../assets/Imagenes/vivint-solar.jpg" alt="Paneles Solares 3">
+          </td>
+          <td>
+            Proyecto con capacidad de 120 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="./../assets/Imagenes/michael-fortsch.jpg" alt="Paneles Solares 4">
+          </td>
+          <td>
+            Proyecto fotovoltaico de 5 MW asociado al proyecto de expansión colombiano. Localizado en el municipio de El Paso, departamento del Cesar. Está alineado con el plan de transición energética en la cual está inmerso el sistema eléctrico colombiao.
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="./../assets/Imagenes/vivint-solar2.jpg" alt="Paneles Solares 5">
+          </td>
+          <td>
+            Proyecto con capacidad de 150 kW fotovoltaicos para usuario residencial. El proyecto permitió la autosuficiencia eléctrica del usuario.
+          </td>
+        </tr>
+      </table>
+    </div>
   <footer>
-      <p>Autor: Adrián Fernández Cabrera</p>
-      <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
+    <p>Autor: Adrián Fernández Cabrera</p>
+    <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
   </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
