--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Proyecto</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./assets/css/main.css"/>
 </head>
 <body class="gridContainer">
     <header id="menuNav">
@@ -81,11 +81,11 @@
       <article>
           <aside class="info__resume">
               <h1>NOSOTROS</h1>
-                Somos una empresa que se encarga de instalaciones eléctricas enfocadas a la energía solar residencial. Nos encargamos de todas las etapas de los proyectos solres fotovoltaicos de baja capacidad. Desde las instalaciones eléctricas, civiles y también de los servicios de interventoria asociados. Al mismo tiempo, contamos con opciones de financiamiento que se pueden ajustar a sus necesidades.
+                Somos una empresa que se encarga de instalaciones eléctricas enfocadas a la energía solar residencial. Nos encargamos de todas las etapas de los proyectos solares fotovoltaicos de baja capacidad. Desde las instalaciones eléctricas, civiles y también de los servicios de interventoria asociados. Al mismo tiempo, contamos con opciones de financiamiento que se pueden ajustar a sus necesidades.
                 
                 <span>Contamos con sede en Barranquilla (ciudad en la que nacimos), Medellín y Caldas.</span>
                 
-                <span>Inscribete a nuestro boletín informativo periodico a través de nuestra página de <a href=".pags/contacto.html">contacto</a> y podrás acceder a un presupuesto personalizado completamente gratis.</span>
+                <span>Inscribete a nuestro boletín informativo periódico a través de nuestra página de <a href=".pags/contacto.html">contacto</a> y podrás acceder a un presupuesto personalizado completamente gratis.</span>
           </aside>
           <aside class ="info__video">
                 <iframe src="https://www.youtube.com/embed/wmEjU3_0jz4" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
