--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./../style.css"/>
+
+<!-- ####### SEO ########### -->
+    <meta name="keywords" content="energía,solar,fotovoltáica,paneles, instalaciones eléctricas">
+    <meta name="description" content="AFC Ingeniería. Empresa dedicada a instalaciones eléctricas fotovoltáica - Inicio">
+    <title>Página de Contacto de empresa AFC Ingeniería</title>
 </head>
 <body class="gridContainerContact">
     <header id="menuNav">
