--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     <link rel="stylesheet" href="./assets/css/main.css"/>
 
 <!-- ####### SEO ########### -->
-    <meta name="keywords" content="energía, solar, fotovoltáica, paneles, instalaciones eléctricas">
+    <!-- Open Graph -->
+    <meta property="og:title" content="Inicio - Empresa AFC Ingeniería" />
+    <meta property="og:url" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez" />
+    <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" />
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@adn1217">
+    <meta name="twitter:creator" content="@adn1217">
+
+    <meta name="keywords" content="energía,solar,fotovoltáica,paneles, instalaciones eléctricas">
     <meta name="description" content="AFC Ingeniería. Empresa dedicada a instalaciones eléctricas fotovoltáica - Inicio">
-    <title>Página de inicio de empresa AFC Ingeniería</title>
+    <title>Inicio - Empresa AFC Ingeniería</title>
 </head>
 <body class="gridContainer">
     <header id="menuNav">
