--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -9,9 +9,17 @@
     <link rel="stylesheet" href="./../style.css"/>
 
 <!-- ####### SEO ########### -->
-    <meta name="keywords" content="energía,solar,fotovoltáica,paneles, instalaciones eléctricas">
+    <meta property="og:title" content="Contacto - Empresa AFC Ingeniería" />
+    <meta property="og:url" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez" />
+    <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" />
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@adn1217">
+    <meta name="twitter:creator" content="@adn1217">
+
+    <meta name="keywords" content="energía,solar,fotovoltaica,paneles, presupuesto">
     <meta name="description" content="AFC Ingeniería. Empresa dedicada a instalaciones eléctricas fotovoltáica - Inicio">
-    <title>Página de Contacto de empresa AFC Ingeniería</title>
+    <title>Contacto - Empresa AFC Ingeniería</title>
 </head>
 <body class="gridContainerContact">
     <header id="menuNav">
