--- a/pags/proyectos.html
+++ b/pags/proyectos.html
@@ -9,9 +9,17 @@
     <link rel="stylesheet" href="./../style.css"/>
 
 <!-- ####### SEO ########### -->
+    <meta property="og:title" content="Proyectos - Empresa AFC Ingeniería" />
+    <meta property="og:url" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez" />
+    <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" />
+    <!-- Twitter card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@adn1217">
+    <meta name="twitter:creator" content="@adn1217">
+    
     <meta name="keywords" content="energía,solar,proyectos,paneles, instalaciones eléctricas">
     <meta name="description" content="AFC Ingeniería. Empresa dedicada a instalaciones eléctricas fotovoltáica - Inicio">
-    <title>Página de Proyectos de empresa AFC Ingeniería</title>
+    <title>Proyectos - Empresa AFC Ingeniería</title>
 </head>
 <body class="gridContainer">
     <header id="menuNav">
