Ajuste imagen preview metadata

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Inicio - Empresa AFC Ingeniería" />
     <meta property="og:url" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez" />
-    <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" />
+    <!-- <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" /> -->
+    <meta property="og:image" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez/assets/Imagenes/vivint-solar.jpg">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@adn1217">
