--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Inicio - Empresa AFC Ingeniería" />
     <meta property="og:url" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez" />
     <!-- <meta property="og:image" content="https://unsplash.com/photos/9CalgkSRZb8" /> -->
-    <meta property="og:image" content="https://github.com/Adn1217/PaginaEmpresarial_Fernandez/assets/Imagenes/vivint-solar.jpg">
+    <meta property="og:image" content="https://images.unsplash.com/flagged/photo-1566838616631-f2618f74a6a2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@adn1217">
