Grid propio para Index y se aplica sass a pag Experiencia

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="description" content="AFC Ingeniería. Empresa dedicada a instalaciones eléctricas fotovoltáica - Inicio">
     <title>Inicio - Empresa AFC Ingeniería</title>
 </head>
-<body class="gridContainer">
+<body class="IndexgridContainer">
     <header id="menuNav">
         <a class="navbar-brand" title="Home" href="./index.html"><img id="header__logo" src="./assets/Iconos/Home.png" alt="Home Icon"></a>
         <nav class="navbar navbar-expand-sm">
