--- a/pags/equipo.html
+++ b/pags/equipo.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./../style.css"/>
+    <!-- <link rel="stylesheet" href="./../style.css"/> -->
+    <link rel="stylesheet" href="./../assets/css/main.css"/>
 
 <!-- ####### SEO ########### -->
     <meta property="og:title" content="Equipo - Empresa AFC Ingeniería" />
