--- a/pags/experiencia.html
+++ b/pags/experiencia.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
-    <!-- <link rel="stylesheet" href="./../style.css"/> -->
+    <link rel="stylesheet" href="./../assets/css/all.css"/>
     <link rel="stylesheet" href="./../assets/css/main.css"/>
 
 <!-- ####### SEO ########### -->
@@ -147,9 +147,14 @@
         </div>
     </section>
     <footer>
-        <p>Autor: Adrián Fernández Cabrera</p>
-        <p><a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></p>
+      <p>
+        <a title="Facebook" href="https://www.facebook.com/Adrian.Fernandez.Cabrera"><span class="fa-brands fa-2x fa-facebook color-Facebook"></span></a>
+        <a title="Twitter" href="https://www.twitter.com/adn1217"><span class="fa-brands fa-2x fa-twitter-square color-Twitter"></span></a>
+        <a title="Instagram" href="https://www.instagram.com/adn1217/"><span class="fa-brands fa-2x fa-instagram color-Instagram"></span></a>
+        <i>Autor: Adrián Fernández Cabrera <a href="mailto:adn1217@hotmail.com">adn1217@hotmail.com</a></i>
+      </p>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
