Se aplica SASS a pagina Contacto

--- a/pags/contacto.html
+++ b/pags/contacto.html
@@ -7,8 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./../assets/Iconos/afc_favicon_logo/afc_favicon_logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./../assets/css/all.css"/>
-    <!-- <link rel="stylesheet" href="./../assets/css/main.css"/> -->
-    <link rel="stylesheet" href="./../style.css"/>
+    <link rel="stylesheet" href="./../assets/css/main.css"/>
 
 <!-- ####### SEO ########### -->
     <meta property="og:title" content="Contacto - Empresa AFC Ingeniería" />
@@ -38,43 +37,41 @@
       </nav>
       <a class="header__last header__nav__option--active" title="Contact" href="./contacto.html">CONTACTO</a>
   </header>
-    <section>
-        <div class="tabla">
-            <table class="table table-hover tablaContacto">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Oficina</th>
-                        <th scope="col">Municipio</th>
-                        <th scope="col">Dirección</th>
-                        <th scope="col">Teléfono</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Los Balsos</td>
-                        <td>Medellín</td>
-                        <td>Cra 12 Sur # 18 - 168</td>
-                        <td>3532222</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Ancón Sur</td>
-                        <td>Caldas</td>
-                        <td>Autopista 1era # 125 - Sector La Tablaza</td>
-                        <td>3189353</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Centro Ejecutivo</td>
-                        <td>Barranquilla</td>
-                        <td>Cra 74 # 54 - 17</td>
-                        <td>3251819</td>
-                    </tr>
-                </tbody>
-            </table> 
-        </div>
+    <section class="tabla">
+        <table class="table table-hover tablaContacto">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Oficina</th>
+                    <th scope="col">Municipio</th>
+                    <th scope="col">Dirección</th>
+                    <th scope="col">Teléfono</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Los Balsos</td>
+                    <td>Medellín</td>
+                    <td>Cra 12 Sur # 18 - 168</td>
+                    <td>3532222</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Ancón Sur</td>
+                    <td>Caldas</td>
+                    <td>Autopista 1era # 125 - Sector La Tablaza</td>
+                    <td>3189353</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Centro Ejecutivo</td>
+                    <td>Barranquilla</td>
+                    <td>Cra 74 # 54 - 17</td>
+                    <td>3251819</td>
+                </tr>
+            </tbody>
+        </table> 
     </section>
    <fieldset class="register">
     <legend>Formulario de Registro</legend>
