--- a/pags/equipo.html
+++ b/pags/equipo.html
@@ -37,8 +37,72 @@
         </nav>
         <a class="header__last" title="Contact" href="./contacto.html">CONTACTO</a>
     </header>
-    <section class="Imagenes">
-        <table class="teamMembers">
+    <section class="Equipo">
+        <div class="row">
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar1.jpg" class="card-img-top" alt="Avatar1">
+                <div class="card-body">
+                  <h5 class="card-title">Rudolf Moss Hoenckel</h5>
+                  <p class="card-text">
+                    Ingeniero Eléctricista, especialista en diseño de instalaciones eléctricas con más de 15 años de experiencia en el diseño de instalaciones fotovoltaicas
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar2.jpg" class="card-img-top" alt="Avatar2">
+                <div class="card-body">
+                  <h5 class="card-title">Vernont Spencer Fisher</h5>
+                  <p class="card-text">
+                    Ingeniero Financiero, especialista en mercados de futuros. Más de 20 años de experiencia en la evaluación financiera de proyectos así como en estrategias de sostenibilidad.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar3.jpg" class="card-img-top" alt="Avatar3">
+                <div class="card-body">
+                  <h5 class="card-title">Xavier Román Ayala</h5>
+                  <p class="card-text">
+                    Ingeniero Eléctricista, especialista en diseño de instalaciones eléctricas con más de 18 años de experiencia en el diseño de instalaciones fotovoltaicas.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar4.jpg" class="card-img-top" alt="Avatar4">
+                <div class="card-body">
+                  <h5 class="card-title">Adolfo Fuenmayor Chavez</h5>
+                  <p class="card-text">
+                    Ingeniero Eléctricista, especialista en diseño de instalaciones eléctricas con más de 18 años de experiencia en el diseño de instalaciones fotovoltaicas.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar5.jpg" class="card-img-top" alt="Avatar5"> 
+                <div class="card-body">
+                  <h5 class="card-title">Ximena Monsalve Reynoso</h5>
+                  <p class="card-text">
+                    Ingeniero Energética. Candidata a Doctorado en la Universidad de Valencia. Analista energética de proyectos.
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card">
+                <img src="./../assets/Imagenes/Equipo/avatar6.jpg" class="card-img-top" alt="Avatar6">
+                <div class="card-body">
+                  <h5 class="card-title">Xang Chi Mei</h5>
+                  <p class="card-text">
+                    Ingeniera comercial. Encargada del posicionamiento estrategico de la compañia y de los proyectos asociados. Relacionamiento empresarial nacional e internacional.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+        <!-- <table class="teamMembers">
             <tr>
                 <td>
                     <img src="./../assets/Imagenes/Equipo/avatar1.jpg" alt="Avatar1">
@@ -87,7 +151,7 @@
                     Ingeniera comercial. Encargada del posicionamiento estrategico de la compañia y de los proyectos asociados. Relacionamiento empresarial nacional e internacional.
                 </td>
             </tr>
-        </table>
+        </table> -->
     </section>
     <footer>
       <p>
