Corrección de palabra

--- a/pags/equipo.html
+++ b/pags/equipo.html
@@ -87,7 +87,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Ximena Monsalve Reynoso</h5>
                   <p class="card-text">
-                    Ingeniero Energética. Candidata a Doctorado en la Universidad de Valencia. Analista energética de proyectos.
+                    Ingeniera Energética. Candidata a Doctorado en la Universidad de Valencia. Analista energética de proyectos.
                 </div>
               </div>
             </div>
